--- a/resources/index.html
+++ b/resources/index.html
@@ -253,7 +253,7 @@
                         graph TD
                             A[Клиент] -->|REST API| B[API Сервер]
                             B --> C{Тип запроса}
-                            C -->|Текст| D[Модель бинарной классификации]
+                            C -->|Текст| D[Классификатор (BERT)]
                             C -->|Изображение| E[Hugging Face Diffusion]
                             D --> F{Тип вывода}
                             F -->|Текст-в-текст| G[Модели Ollama]
