--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Gateway — Единый API для языковых моделей</title>
     <link href="https://fonts.cdnfonts.com/css/michroma-2" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
 </head>
 <body>
     <div class="hero">
         <div class="container">
             <div class="hero-content">
-                <img src="/avatar.jpg" alt="AI Gateway Logo" class="avatar">
+                <img src="/jpeg/avatar.jpg" alt="AI Gateway Logo" class="avatar">
                 <h1>AI Gateway</h1>
             </div>
             <p>Единый API для интеграции языковых моделей Ollama и Hugging Face</p>         
@@ -22,6 +22,9 @@
                 </a>
                 <a href="/redoc" target="_blank" rel="noopener noreferrer" class="doc-link">
                     <span>📖 ReDoc</span>
+                </a>
+                <a href="/html/chat.html" target="_blank" rel="noopener noreferrer" class="doc-link">
+                    <span>📖 Chat</span>
                 </a>
             </div>
         </div>
