smart images endpoint

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -12,7 +12,7 @@
     <div class="hero">
         <div class="container">
             <div class="hero-content">
-                <img src="/jpeg/avatar.jpg" alt="AI Gateway Logo" class="avatar">
+                <img src="/img/avatar.jpg" alt="AI Gateway Logo" class="avatar">
                 <h1>AI Gateway</h1>
             </div>
             <p>Единый API для интеграции языковых моделей Ollama и Hugging Face</p>         
