--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -71,9 +71,9 @@
                             A[Клиент] -->|REST API| B[API Сервер]
                             B --> C{Тип запроса}
                             C -->|Текст| D[Классификатор BERT]
-                            C -->|Изображение| E[Hugging Face Diffusion]
+                            C -->|Изображение| E[Диффузионные модели Hugging Face]
                             D --> F{Тип вывода}
-                            F -->|Текст-в-текст| G[Модели Ollama]
+                            F -->|Текст-в-текст| G[Текстовые модели Ollama/Hugging Face]
                             F -->|Текст-в-изображение| H[Модели Ollama\nОптимизация промптов]
                             H --> E
                             B --> I[Кэш моделей]
