--- a/resources/html/404.html
+++ b/resources/html/404.html
@@ -18,7 +18,7 @@
             
             <div class="doc-links">
                 <a href="/" class="doc-link">
-                    <span>🏠 На главную</span>
+                    <span>На главную</span>
                 </a>
             </div>
         </div>
@@ -27,14 +27,14 @@
     <div class="container">
         <div class="features">
             <div class="feature-card">
-                <h3>🚀 Возможные причины</h3>
+                <h3>Возможные причины</h3>
                 <p>• Опечатка в адресе страницы<br>
                    • Устаревшая ссылка<br>
                    • Страница была перемещена</p>
             </div>
             
             <div class="feature-card">
-                <h3>🛠 Что можно сделать</h3>
+                <h3>Что можно сделать</h3>
                 <p>• Проверьте правильность URL<br>
                    • Используйте навигационное меню<br>
                    • Обратитесь в поддержку</p>
