--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -18,13 +18,13 @@
             <p>Единый API для интеграции языковых моделей Ollama и Hugging Face</p>         
             <div class="doc-links">
                 <a href="/docs" target="_blank" rel="noopener noreferrer" class="doc-link">
-                    <span>📚 Swagger UI</span>
+                    <span>Swagger UI</span>
                 </a>
                 <a href="/redoc" target="_blank" rel="noopener noreferrer" class="doc-link">
-                    <span>📖 ReDoc</span>
+                    <span>ReDoc</span>
                 </a>
                 <a href="/html/chat.html" target="_blank" rel="noopener noreferrer" class="doc-link">
-                    <span>📖 Chat</span>
+                    <span>Demo chatbot</span>
                 </a>
             </div>
         </div>
@@ -33,17 +33,17 @@
     <div class="container">
         <div class="features">
             <div class="feature-card">
-                <h3>🚀 Поддержка нескольких моделей</h3>
+                <h3>Поддержка нескольких моделей</h3>
                 <p>Беспроблемная интеграция с моделями Ollama и Hugging Face. Бесшовно переключайтесь между провайдерами в одном API.</p>
             </div>
             
             <div class="feature-card">
-                <h3>🖼️ Умная генерация</h3>
+                <h3>Умная генерация</h3>
                 <p>Автоматическое определение запросов на генерацию изображений. Интеллектуальная предобработка пользовательских промптов для повышения качества ответов.</p>
             </div>
             
             <div class="feature-card">
-                <h3>🔒 Для бизнес-приложений</h3>
+                <h3>Для бизнес-приложений</h3>
                 <p>Аутентификация по токенам, ограничение частоты запросов и API для мониторинга.</p>
             </div>
         </div>
