--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -10,23 +10,30 @@
 </head>
 <body>
     <div class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <img src="/img/avatar.jpg" alt="AI Gateway Logo" class="avatar">
-                <h1>AI Gateway</h1>
-            </div>
-            <p>Единый API для интеграции языковых моделей Ollama и Hugging Face</p>         
-            <div class="doc-links">
-                <a href="/docs" target="_blank" rel="noopener noreferrer" class="doc-link">
-                    <span>Swagger UI</span>
-                </a>
-                <a href="/redoc" target="_blank" rel="noopener noreferrer" class="doc-link">
-                    <span>ReDoc</span>
-                </a>
-                <a href="/html/chat.html" target="_blank" rel="noopener noreferrer" class="doc-link">
-                    <span>Demo chatbot</span>
-                </a>
-            </div>
+        <div class="hero-content">
+            <img src="/img/avatar.jpg" alt="AI Gateway Logo" class="avatar">
+            <h1>AI Gateway</h1>
+        </div>
+        <p>Единый API для интеграции языковых моделей Ollama и Hugging Face</p>         
+        <div class="doc-links">
+            <a href="/docs" target="_blank" rel="noopener noreferrer" class="doc-link">
+                <svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M4 6h16M4 12h16M4 18h16"/>
+                </svg>
+                <span>Swagger UI</span>
+            </a>
+            <a href="/redoc" target="_blank" rel="noopener noreferrer" class="doc-link">
+                <svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/>
+                </svg>
+                <span>ReDoc</span>
+            </a>
+            <a href="/html/chat.html" target="_blank" rel="noopener noreferrer" class="doc-link">
+                <svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M21 15a2 2 0 01-2 2H7l-4 4V5a2 2 0 012-2h14a2 2 0 012 2z"/>
+                </svg>
+                <span>Demo chatbot</span>
+            </a>
         </div>
     </div>
 
