--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -40,18 +40,43 @@
     <div class="container">
         <div class="features">
             <div class="feature-card">
-                <h3>Поддержка нескольких моделей</h3>
-                <p>Беспроблемная интеграция с моделями Ollama и Hugging Face. Бесшовно переключайтесь между провайдерами в одном API.</p>
+                <h3>Поддержка OpenAI API</h3>
+                <p>Полная эмуляция OpenAI API, включая структуру запросов и ответов. Позволяет интеграцию с существующими клиентами OpenAI без изменения кода.</p>
             </div>
             
             <div class="feature-card">
-                <h3>Умная генерация</h3>
-                <p>Автоматическое определение запросов на генерацию изображений. Интеллектуальная предобработка пользовательских промптов для повышения качества ответов.</p>
+                <h3>Поддержка Ollama</h3>
+                <p>Интеграция с локальным сервера Ollama в качестве бэкенда и использование его для инференса моделей в формате GGUF.</p>
+            </div>
+
+            <div class="feature-card">
+                <h3>Расширенная поддержка LLM</h3>
+                <p>Поддержка репозиториев моделей Ollama и Hugging Face, с автоматическим маппингом имён моделей на соответствующие бэкенды. Единый пользовательский интерфейс независимо от формата модели (PyTorch, GGUF, etc.)</p>
+            </div>
+
+            <div class="feature-card">
+                <h3>Локальный кэш моделей</h3>
+                <p>Кеширование весов моделей в локальном хранилище для ускорения последующих загрузок. Предоставляется API управления кэшем.</p>
+            </div>
+
+            <div class="feature-card">
+                <h3>Классификация запросов</h3>
+                <p>Использование lightweight-моделей (BERT) для классификации типа пользовательского запроса (текст/изображение) на основе семантики.</p>
             </div>
             
             <div class="feature-card">
-                <h3>Для бизнес-приложений</h3>
-                <p>Аутентификация по токенам, ограничение частоты запросов и API для мониторинга.</p>
+                <h3>Автоматическое перефразирование</h3>
+                <p>Модель-аугментатор превращает короткие пользовательские запросы в детализированные промпты для генерации более качественных и детальных изображений.</p>
+            </div>
+
+            <div class="feature-card">
+                <h3>Аутентификация</h3>
+                <p>Контроль доступа к API помощью токенов авторизации.</p>
+            </div>
+
+            <div class="feature-card">
+                <h3>Монироринг</h3>
+                <p>Системный мониторинг работы приложения, включая диагностику PyTorch и бэкенда Ollama.</p>
             </div>
         </div>
 
