--- a/resources/html/chat.html
+++ b/resources/html/chat.html
@@ -43,7 +43,7 @@
                 const select = document.getElementById('modelSelect');
                 
                 select.innerHTML = data.data
-                    .map(m => `<option value="${m.id}">${m.id} (${m.owned_by})</option>`)
+                    .map(m => `<option value="${m.id}">${m.owned_by} » ${m.id}</option>`)
                     .join('');
             } catch (e) {
                 console.error('Error loading models:', e);
@@ -71,6 +71,8 @@
             try {
                 btn.classList.add('sending');
                 btn.disabled = true;
+                messageInput.value = '';
+
                 // Показать индикатор загрузки
                 const response = await fetch('/v1/chat/completions', {
                     method: 'POST',
@@ -99,7 +101,6 @@
             } finally {
                 btn.classList.remove('sending');
                 btn.disabled = false;
-                messageInput.value = '';
             }
         }
 
